Fixed styling issues with buttons and slider which now fixes to the correct position. Made buttons more visible and made text on slider track more clear and visible. Removed button for showing guide as well as the guide altogether and placed it under the instructions section with ability to move to bottom of screen to see visualization

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2888,8 +2888,8 @@ button,
 	background-color: transparent;
 	border-radius: 5px;
 	border: 0;
-	box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.125);
-	color: #ffffff !important;
+	box-shadow: inset 0 0 0 2px rgb(0, 0, 0, .15);
+	color: black !important;
 	cursor: pointer;
 	display: inline-block;
 	font-family: Raleway, Helvetica, sans-serif;
