--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* app css classes */
 
-/* .App-container {
+/* .app-container {
     margin: 0px;
     padding: 0px;
     position: absolute;
@@ -11,11 +11,11 @@
 
 /* slider css classes */
 
-.App-container .ticks {
+.app-container .ticks {
     font-size: 10px;
 }
   
-.App-container
+.app-container
 .track,
 .track-inset,
 .track-overlay {
@@ -23,41 +23,40 @@
 }
 
 .slider-svg {
-    position: relative;
-    bottom: 200px;
+    position: absolute;
     min-height: 100px;
-    /* height: 25%; */
+    visibility: hidden;
     width: 100%;
     background: rgba(255,255,255,0);
 }
 
-.App-container .track-text {
+.app-container .track-text {
     font-size: 0.8vw;
 }
 
-.App-container .label {
+.app-container .label {
     font-size: 15px;
 }
 
-.App-container .track {
+.app-container .track {
     stroke: #000;
     stroke-opacity: 0.3;
     stroke-width: 10px;
 }
 
-.App-container .track-inset {
+.app-container .track-inset {
     stroke: #dcdcdc;
     stroke-width: 8px;
 }
 
-.App-container .track-overlay {
+.app-container .track-overlay {
     pointer-events: stroke;
     stroke-width: 50px;
     stroke: transparent;
     cursor: crosshair;
 }
 
-.App-container .handle {
+.app-container .handle {
     fill: #fff;
     stroke: #000;
     stroke-opacity: 0.5;
