--- a/src/OWSonification.css
+++ b/src/OWSonification.css
@@ -1,7 +1,5 @@
 .OWSonification {
-    position: fixed;
-    top: 10px;
+    position: absolute;
     right: 10px;
-    margin-left: 5px;
-    margin-right: 5px;
+    display: inline-block;
 }
